Skip opacity check for underlays on Android.

We cannot cancel an overlay on android since there is no fallback.
Also, the resource's idea of opacity is unrelated to what the
overlay actually contains; it's just a dummy resource.

This CL skips the opacity check on Android.

Bug: 842931
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel
Change-Id: I8223ca35f78548e3150af05efa715fdd801e115e
Reviewed-on: https://chromium-review.googlesource.com/1062017
Reviewed-by: Antoine Labour <piman@chromium.org>
Commit-Queue: Frank Liberato <liberato@chromium.org>
Cr-Commit-Position: refs/heads/master@{#559675}
Former-commit-id: 9c9ce82fac113a031ea2d059ff9799e15e9abdb3