components/viz/service/display/overlay_strategy_underlay.h
@@ -21,8 +21,19 @@ class OverlayCandidateValidator;
 class VIZ_SERVICE_EXPORT OverlayStrategyUnderlay
     : public OverlayProcessor::Strategy {
  public:
-  explicit OverlayStrategyUnderlay(
-      OverlayCandidateValidator* capability_checker);
+  enum class OpaqueMode {
+    // Require candidates to be |is_opaque|.
+    RequireOpaqueCandidates,
+
+    // Allow non-|is_opaque| candidates to be promoted.
+    AllowTransparentCandidates,
+  };
+
+  // If |allow_nonopaque_overlays| is true, then we don't require that the
+  // the candidate is_opaque.
+  OverlayStrategyUnderlay(
+      OverlayCandidateValidator* capability_checker,
+      OpaqueMode opaque_mode = OpaqueMode::RequireOpaqueCandidates);
   ~OverlayStrategyUnderlay() override;
 
   bool Attempt(const SkMatrix44& output_color_matrix,
@@ -35,6 +46,7 @@ class VIZ_SERVICE_EXPORT OverlayStrategyUnderlay
 
  private:
   OverlayCandidateValidator* capability_checker_;  // Weak.
+  OpaqueMode opaque_mode_;
 
   DISALLOW_COPY_AND_ASSIGN(OverlayStrategyUnderlay);
 };
